// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings onCancel 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "isConfirmed": true,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings onDeleteContact 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "isConfirmed": true,
    "isMarkedForDelete": true,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": true,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings onNotificationPreferenceChanged 1`] = `
Array [
  Object {
    "email": "bit.bot@bitrise.io",
    "isConfirmed": true,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
  Object {
    "email": "purr.request@bitrise.io",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "failedPublish": true,
      "newVersion": false,
      "successfulPublish": false,
    },
  },
]
`;

exports[`NotificationSettings renders correctly 1`] = `
<_default
  appContacts={
    Array [
      Object {
        "email": "bit.bot@bitrise.io",
        "isConfirmed": true,
        "notificationPreferences": Object {
          "failedPublish": true,
          "newVersion": true,
          "successfulPublish": true,
        },
      },
      Object {
        "email": "purr.request@bitrise.io",
        "isConfirmed": false,
        "notificationPreferences": Object {
          "failedPublish": true,
          "newVersion": false,
          "successfulPublish": false,
        },
      },
    ]
  }
  onAddEmail={[Function]}
  onCancel={[Function]}
  onDeleteContact={[Function]}
  onNotificationPreferenceChanged={[Function]}
/>
`;
